type-safe-builder-macro/tests/compile_failure/default_as_standard_with_mandatory_field_not_set.rs
use type_safe_builder_macro::Builder;

#[derive(Builder)]
#[builder(default)]
struct StructToBuild {
    #[builder(mandatory)]
    field: i64,
}

fn main() {
    let _ = StructToBuildBuilder::builder().build();
}
